    for the predicate. In addition, defining clauses for a multifile
    Entity::Functor/Arity without a corresponding multifile/1 directive
    will now result in a compilation error instead of simply a warning.

    Removed the Logtalk compiler restriction that forced discontiguous/1
    and dynamic/1 directives to precede calls to the declared predicates.

    Allow the use of the :/1 control construct on the body of grammar rules.

    When debugging messages specified in uses/2 directives, the message is now
    printed implicitly qualified as in the source code written by the user.

    Changed the internal predicates used in the implementation of the built-in
    multi-threading predicates in order to facilitate the integration with
    high-level debugging tools that require decompilation of the generated
    Prolog code.

    Corrected a bug introduced in Logtalk 2.42.4 on the compilation of entity
    predicates that call synchronized predicates. This bug resulted in calls
    being made instead to the non-synchronized forms of the predicates, which
    would manifest in random failures of thread goals.

    Corrected a long standing bug where a runtime-compiled meta-call within
    a category would be compiled as a call to a predicate of the object
    importing the category instead as a call to a local category predicate.

    Corrected a long standing bug where entity flag values set locally using
    the set_logtalk_flag/2 directive would fail to be saved into the entity
    compiled code.

    Corrected a bug in setting the correct execution context when calling
    a meta-argument that requires a runtime compilation in the context of
    "sender".

    Refined error checking for the built-in predicates category_property/2,
    object_property/2, and protocol_property/2, throwing a type_error/2 when
    the second argument is neither a variable or a callable term. Added an
    info/1 entity property.
